<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="55dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="26sp"
                    android:typeface="serif"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_tittle">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/cardview_shadow_start_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="filled">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:autofillHints="mail"
                        android:hint="@string/user_email_hint"
                        android:importantForAutofill="yes"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="filled"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:autofillHints="password"
                        android:hint="@string/user_pwd_hint"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email_hint"
                    android:layout_marginTop="10dp"
                    android:importantForAutofill="no"
                    android:text="@string/login" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
<LinearLayout
    android:id="@+id/sign_up"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:text="@string/no_account"
        android:textSize="@dimen/signUp_dim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/red"
        android:textSize="@dimen/signUp_dim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp" />
</LinearLayout>
</LinearLayout>
